Making intreface and a functional service

--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -1,11 +1,11 @@
 <table class="table table-bordered">
   <thead>
     <tr>
-      <th scope="col" (click)="bugsSorted()">Title</th>
-      <th scope="col" (click)="bugsSorted">Priority</th>
-      <th scope="col" (click)="bugsSorted">Reporter</th>
-      <th scope="col" (click)="bugsSorted">Date Created</th>
-      <th scope="col" (click)="bugsSorted">Status</th>
+      <th scope="col">Title</th>
+      <th scope="col">Priority</th>
+      <th scope="col">Reporter</th>
+      <th scope="col">Date Created</th>
+      <th scope="col">Status</th>
     </tr>
   </thead>
   <tbody>
