--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -1,11 +1,11 @@
 <table class="table table-bordered">
   <thead>
     <tr>
-      <th scope="col">Title</th>
-      <th scope="col">Priority</th>
-      <th scope="col">Reporter</th>
-      <th scope="col">Date Created</th>
-      <th scope="col">Status</th>
+      <th scope="col" (click)="getSorted(headers[0], sort[0])">Title</th>
+      <th scope="col" (click)="getSorted(headers[1], sort[0])">Priority</th>
+      <th scope="col" (click)="getSorted(headers[2], sort[0])">Reporter</th>
+      <th scope="col" (click)="getSorted(headers[3], sort[0])">Date Created</th>
+      <th scope="col" (click)="getSorted(headers[4], sort[0])">Status</th>
     </tr>
   </thead>
   <tbody>
