--- a/src/app/main/nav/nav.component.html
+++ b/src/app/main/nav/nav.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">BugReportSystem</span>
-  </nav>
+    <a class="navbar-brand" [routerLink]="['/content']" >BugReportingSystem</a>    
+</nav>
