--- a/src/app/main/bugform/bugform.component.html
+++ b/src/app/main/bugform/bugform.component.html
@@ -1,10 +1,10 @@
-<form [formGroup]="form" class="form-1">
+<form [formGroup]="postForm" class="form-1">
 
     <!-- Title -->
     <div class="form-group">
         <label>Title</label>
         <input type="text" class="form-control" placeholder="Enter the title for the bug" formControlName="title">
-        <div *ngIf="form.get('title').errors?.required && form.get('title').dirty" class="text-danger">
+        <div *ngIf="postForm.get('title').errors?.required && postForm.get('title').dirty" class="text-danger">
             This Field is required!
         </div>
     </div>
@@ -13,7 +13,7 @@
     <div class="form-froup">
         <label>Description</label>
         <input type="text" class=form-control placeholder="Enter the description for the bug" formControlName="description" id="desc-1">
-        <div *ngIf="form.get('description').errors?.required && form.get('description').dirty" class="text-danger">
+        <div *ngIf="postForm.get('description').errors?.required && postForm.get('description').dirty" class="text-danger">
             This Field is required!
         </div>
     </div>
@@ -27,7 +27,7 @@
             <option value="2">Major</option>
             <option value="3">Critical</option>
         </select>
-        <div *ngIf="form.get('priority').errors?.required" class="text-danger">
+        <div *ngIf="postForm.get('priority').errors?.required" class="text-danger">
             This Field is required!
         </div>
     </div>
@@ -41,7 +41,7 @@
             <option>PO</option>
             <option>DEV</option>
         </select>
-        <div *ngIf="form.get('reporter').errors?.required" class="text-danger">
+        <div *ngIf="postForm.get('reporter').errors?.required" class="text-danger">
             This Field is required!
         </div>
     </div>
@@ -55,11 +55,11 @@
             <option>Done</option>
             <option>Rejected</option>
         </select>
-        <div *ngIf="form.get('status').invalid && form.get('status').dirty"class="text-danger">
+        <div *ngIf="postForm.get('status').invalid && postForm.get('status').dirty"class="text-danger">
             This Field is required!
         </div>
     </div>
 
-    <button class='btn btn-primary' [disabled]="!form.valid" (click)="onSubmit()">Submit</button>
+    <button class='btn btn-primary' [disabled]="!postForm.valid" (click)="onSubmit()">Submit</button>
 </form>
 <router-outlet></router-outlet>
