--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -20,20 +20,33 @@
             Status
           </th>
           <th scope="col"></th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let bug of bugs">
+        <tr *ngFor="let bug of bugs | paginate: {
+          id:'table-pagination',
+          itemsPerPage: perPage,
+          currentPage: page ,
+          totalItems: totalRecords
+        } ">
           <td>{{ bug.title }}</td>
           <td>{{ bug.priority }}</td>
           <td>{{ bug.reporter }}</td>
           <td>{{ bug.createdAt }}</td>
           <td>{{ bug.status }}</td>
           <td>
-            <button class="btn btn-primary" (click)="onClick(bug.id)">Edit</button>
+            <button class="btn btn-primary" (click)="onEdit(bug.id)">Edit</button>
+          </td>
+          <td>
+            <button class="btn btn-primary" (click)="onDelete(bug.id)">Delete</button>
           </td>
         </tr>
       </tbody>
     </table>
+    <div class="btn">
+      <button class="btn btn-primary" (click)="Prev()"><<</button>
+      <button class="btn btn-primary" (click)="Next()">>></button>
+    </div>
   </div>
 </div>
