--- a/src/app/main/edit-bugs/edit-bugs.component.scss
+++ b/src/app/main/edit-bugs/edit-bugs.component.scss
@@ -6,7 +6,7 @@
 }
 
 #putDesc-1 {
-    text-align: center;
+    text-align: justify;
     padding-bottom:200px;
     padding-top:20px;
     word-wrap: wrap break-word;
