Changing the front

--- a/src/app/main/bugform/bugform.component.html
+++ b/src/app/main/bugform/bugform.component.html
@@ -1,3 +1,4 @@
+<div style="background-color:#95999c; width:100%; height:897px;">
 <form [formGroup]="postForm" class="form-1">
 
     <!-- Title -->
@@ -23,9 +24,9 @@
         <label>Priority</label>
         <select class="form-control" formControlName="priority">
             <option [ngValue]="null">Select</option>
-            <option value="1">Minor</option>
-            <option value="2">Major</option>
-            <option value="3">Critical</option>
+            <option value="1" style="color:green">Minor = 1</option>
+            <option value="2" style="color:orange">Major = 2</option>
+            <option value="3" style="color:red">Critical = 3</option>
         </select>
         <div *ngIf="postForm.get('priority').errors?.required" class="text-danger">
             This Field is required!
@@ -63,3 +64,4 @@
     <button class='btn btn-primary' [disabled]="!postForm.valid" (click)="onSubmit()">Submit</button>
 </form>
 <router-outlet></router-outlet>
+</div>
