--- a/src/app/main/nav/nav.component.html
+++ b/src/app/main/nav/nav.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" [routerLink]="['/content']" >BugReportingSystem</a>    
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" [routerLink]="['/content']" >8ug Reporting System</a>    
 </nav>
